Definitely works now

--- a/generators/app/templates/src/index.html
+++ b/generators/app/templates/src/index.html
@@ -21,7 +21,7 @@
 
         <h1><%= props.appname %></h1>
 
-        <div id="<%= this.s.camelize(props.appname) %>"></div>
+        <div id="<%= s.camelize(props.appname,true) %>"></div>
 
     </div>
 
