--- a/generators/app/templates/src/embed.html
+++ b/generators/app/templates/src/embed.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>New project</title>
-
-    <base href="{{version}}/">
+    <title><%= props.appname %></title>
 
     <link rel="stylesheet" href="{{stylePath}}style.css" type="text/css">
 
@@ -19,7 +17,7 @@
 </head>
 <body>
 
-    <div id="newProject" class="newProject embed">
+    <div id="<%= s.camelize(props.appname,true) %>" class="<%= s.camelize(props.appname,true) %> embed">
     {{{content}}}
     </div>
 
@@ -28,7 +26,7 @@
     <![endif]-->
 
     <script src="{{commonPath}}pym.v0.4.1.js" type="text/javascript"></script>
-    <script src="{{commonPath}}d3.v3.3.js" type="text/javascript"></script>
+    <script src="{{commonPath}}d3.v3.5.5.js" type="text/javascript"></script>
     <script src="{{commonPath}}jquery.1.7.2.js" type="text/javascript"></script>
     <script src="{{commonPath}}ractive.v0.6.1.js" type="text/javascript"></script>
     <script src="{{scriptPath}}script.js" type="text/javascript"></script>
