--- a/generators/app/templates/src/index.html
+++ b/generators/app/templates/src/index.html
@@ -12,7 +12,7 @@
     try{Typekit.load();}catch(e){}
     </script>
 
-    <link rel="stylesheet" href="style/style.css" type="text/css">
+    <link rel="stylesheet" href="{{pkg.version}}/style.css" type="text/css">
 
 </head>
 <body>
@@ -25,7 +25,7 @@
 
     </div>
 
-    <script src="script/embed.js" type="text/javascript"></script>
+    <script src="embed.js" type="text/javascript"></script>
 
 </body>
 </html>
