--- a/generators/app/templates/src/index.html
+++ b/generators/app/templates/src/index.html
@@ -7,12 +7,18 @@
 
     <title><%= props.appname %></title>
 
-    <script type="text/javascript" src="//use.typekit.com/wtj1rji.js"></script>
-    <script type="text/javascript">
-    try{Typekit.load();}catch(e){}
-    </script>
-
     <link rel="stylesheet" href="{{pkg.version}}/style.css" type="text/css">
+
+    <script>
+      (function(d) {
+        var config = {
+          kitId: 'wnz3ozp',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
 
 </head>
 <body>
