--- a/generators/app/templates/src/view/index.html
+++ b/generators/app/templates/src/view/index.html
@@ -9,6 +9,10 @@
 
     <link rel="stylesheet" href="{{pkg.version}}/style.css" type="text/css">
 
+    <link rel="alternate" type="application/json+oembed"
+      href="//cloudfront-files-1.publicintegrity.org/apps/<%= props.year %>/<%= props.month %>/<%= s.slugify(props.appname) %>/oembed.json"
+      title="<%= props.appname %>" />
+
     <script>
       (function(d) {
         var config = {
@@ -23,15 +27,15 @@
 </head>
 <body>
 
-    <div id="<%= s.camelize(props.appname,true) %>" class="<%= s.camelize(props.appname,true) %> embed">
-    {{{content}}}
+    <div class="preview">
+
+        <h1><%= props.appname %></h1>
+
+        <div id="<%= s.camelize(props.appname,true) %>"></div>
+
     </div>
 
-    <!--[if lt IE 9]>
-    <script type="text/javascript" src="/apps/common/aight.min.js"></script>
-    <![endif]-->
-
-    <script src="{{pkg.version}}/script.js" type="text/javascript"></script>
+    <script src="embed.js" type="text/javascript"></script>
 
 </body>
 </html>
