--- a/generators/app/templates/src/view/index.html
+++ b/generators/app/templates/src/view/index.html
@@ -27,15 +27,73 @@
 </head>
 <body>
 
-    <div class="preview">
-
-        <h1><%= props.appname %></h1>
-
-        <div id="<%= s.camelize(props.appname,true) %>"></div>
-
+    <div id="<%= s.camelize(props.appname,true) %>" class="<%= s.camelize(props.appname,true) %> embed">
+    {{{content}}}
     </div>
 
-    <script src="embed.js" type="text/javascript"></script>
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="/apps/common/aight.min.js"></script>
+    <![endif]-->
+
+    <script src="{{pkg.version}}/script.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+    var publici_domain_check = new RegExp("publicintegrity\.org");
+    var publici_domain_result = publici_domain_check.exec(document.referrer);
+    if(publici_domain_result===null) {
+        
+        //Google Analytics
+        
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        
+        ga('create', 'UA-3383794-6', 'auto');
+        
+        ga('require', 'ec');
+        ga('require', 'displayfeatures');
+        
+        ga('set', 'dimension9', 'Chris Zubak-Skees');
+        ga('send', 'pageview', window.location.pathname);
+      
+        //Normalize referrer. Strip all but hostname
+        var domain = 'undefined';
+        if (document.referrer) {
+            domain = document.referrer.match(/:\/\/(.[^/]+)/)[1];
+            domain = domain.replace('www.','');
+        }
+
+    // if(publici_domain_result===null) {
+
+        //Chartbeat
+        var _sf_async_config={};
+        /** CONFIGURATION START **/
+        _sf_async_config.uid = 2241;
+        _sf_async_config.domain = "publicintegrity.org";
+        _sf_async_config.path = window.location.pathname +'?' + domain;
+        _sf_async_config.title = domain + ': <%= props.appname %>';
+        /** CONFIGURATION END **/
+        (function(){
+            function loadChartbeat() {
+                window._sf_endpt=(new Date()).getTime();
+                var e = document.createElement("script");
+                e.setAttribute("language", "javascript");
+                e.setAttribute("type", "text/javascript");
+                e.setAttribute("src",
+                        (("https:" == document.location.protocol) ?
+                            "https://static.chartbeat.com/" :
+                            "http://static.chartbeat.com/") +
+                        "js/chartbeat.js");
+                document.body.appendChild(e);
+            }
+            var oldonload = window.onload;
+            window.onload = (typeof window.onload != "function") ?
+                loadChartbeat : function() { oldonload(); loadChartbeat(); };
+        })();
+
+    }
+    </script>
 
 </body>
 </html>
